Fixed overlapping menu

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -98,7 +98,7 @@
                     position: relative;
                     display: block;
                     font-size: 0.8em;
-
+                    padding-left: 25px;
 
                     &::before {
                         position: absolute;
